[gd_scene load_steps=3 format=3 uid="uid://ctyewev2c6jmr"]

[ext_resource type="Script" path="res://Scripts/UI/ConfigurationNode.gd" id="1_k2gt8"]
[ext_resource type="ButtonGroup" uid="uid://dqv5st3l14jv3" path="res://new_button_group.tres" id="2_mthkw"]

[node name="Configuration" type="Node2D"]
script = ExtResource("1_k2gt8")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
self_modulate = Color(0.258824, 0.258824, 0.258824, 0.654902)
offset_right = 197.0
offset_bottom = 214.0

[node name="Panel" type="Panel" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="UnitButton" type="CheckButton" parent="VBoxContainer/Panel"]
layout_mode = 2
offset_top = 4.0
offset_right = 197.0
offset_bottom = 35.0
button_pressed = true
button_group = ExtResource("2_mthkw")
text = "Unit"

[node name="BaseButton" type="CheckButton" parent="VBoxContainer/Panel"]
layout_mode = 2
offset_top = 35.0
offset_right = 197.0
offset_bottom = 66.0
button_group = ExtResource("2_mthkw")
text = "Base"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/Panel"]
layout_mode = 2
offset_top = 70.0
offset_right = 197.0
offset_bottom = 74.0

[node name="Label" type="Label" parent="VBoxContainer/Panel"]
layout_mode = 2
offset_top = 78.0
offset_right = 197.0
offset_bottom = 101.0
text = "Grid configuration"
horizontal_alignment = 1

[node name="CanShareTileButton" type="CheckButton" parent="VBoxContainer/Panel"]
layout_mode = 2
offset_top = 105.0
offset_right = 197.0
offset_bottom = 136.0
text = "Units can share tile"

[node name="StopNearTargetButton" type="CheckButton" parent="VBoxContainer/Panel"]
layout_mode = 2
offset_top = 140.0
offset_right = 197.0
offset_bottom = 171.0
text = "Stop near target"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer/Panel"]
layout_mode = 2
offset_top = 175.0
offset_right = 197.0
offset_bottom = 179.0

[node name="ResetButton" type="Button" parent="VBoxContainer/Panel"]
layout_mode = 2
offset_top = 183.0
offset_right = 197.0
offset_bottom = 214.0
text = "Reset Scene"

[connection signal="toggled" from="VBoxContainer/Panel/UnitButton" to="." method="_on_unit_button_toggled"]
[connection signal="toggled" from="VBoxContainer/Panel/BaseButton" to="." method="_on_base_button_toggled"]
[connection signal="toggled" from="VBoxContainer/Panel/CanShareTileButton" to="." method="_on_can_share_tile_button_toggled"]
[connection signal="toggled" from="VBoxContainer/Panel/StopNearTargetButton" to="." method="_on_stop_near_target_button_toggled"]
[connection signal="pressed" from="VBoxContainer/Panel/ResetButton" to="." method="_on_reset_button_pressed"]
